syntax = "proto3";

package keymap.v1;

import "keymap/v1/keymap.proto";
import "keymap/v1/editor.proto";
import "keymap/v1/platform.proto";

// OnekeymapService provides APIs for managing keymap settings for the UI.
service OnekeymapService {
  // (-- api-linter: core::0127::http-annotation=disabled
  //     aip.dev/not-precedent: OnekeymapService only support grpc --)
  // ImportKeymap imports editor-specific config file
  rpc ImportKeymap(ImportKeymapRequest) returns (ImportKeymapResponse);

  // (-- api-linter: core::0127::http-annotation=disabled
  //     aip.dev/not-precedent: OnekeymapService only support grpc --)
  // ExportKeymap exports the current keymap settings.
  rpc ExportKeymap(ExportKeymapRequest) returns (ExportKeymapResponse);

  // (-- api-linter: core::0127::http-annotation=disabled
  //     aip.dev/not-precedent: OnekeymapService only support grpc --)
  // ConfigDetect returns the default config path.
  rpc ConfigDetect(ConfigDetectRequest) returns (ConfigDetectResponse);

  // (-- api-linter: core::0127::http-annotation=disabled
  //     aip.dev/not-precedent: OnekeymapService only support grpc --)
  // (-- api-linter: core::0131::response-message-name=disabled
  //     aip.dev/not-precedent: GetKeymap is not a standard Get method, it loads from config content --)
  // (-- api-linter: core::0131::request-unknown-fields=disabled
  //     aip.dev/not-precedent: GetKeymap uses config content, not resource name --)
  // (-- api-linter: core::0131::request-name-required=disabled
  //     aip.dev/not-precedent: GetKeymap uses config content, not resource name --)
  // GetKeymap loads a keymap from a text content.
  rpc GetKeymap(GetKeymapRequest) returns (GetKeymapResponse);

  // (-- api-linter: core::0127::http-annotation=disabled
  //     aip.dev/not-precedent: OnekeymapService only support grpc --)
  // SaveKeymap saves the current keymap settings to a text content.
  rpc SaveKeymap(SaveKeymapRequest) returns (SaveKeymapResponse);
}

// ImportKeymapRequest is the request message for ImportKeymap.
message ImportKeymapRequest {
  // The editor type.
  EditorType editor_type = 1;
  // The source keymap file content in editor-specific config syntax
  string source = 2;
  // The base keymap to compare against in onekeymap config syntax
  string base = 3;
}

// ImportKeymapResponse is the response message for ImportKeymap.
message ImportKeymapResponse {
  // The imported keymap.
  Keymap keymap = 1;
  // The changes between the base and the imported keymap.
  KeymapChanges changes = 2;
}

// KeymapChanges represents the changes to a keymap setting.
message KeymapChanges {
  // The keymaps that are added.
  repeated Action add = 1;
  // The keymaps that are removed.
  repeated Action remove = 2;
  // The keymaps that are updated.
  repeated ActionDiff update = 3;
}

// ActionDiff represents the diff of a keymap.
message ActionDiff {
  // The keymap before the change.
  Action origin = 1;
  // The keymap after the change.
  Action updated = 2;
}

// ExportKeymapRequest is the request message for ExportKeymap.
message ExportKeymapRequest {
  // The editor type.
  EditorType editor_type = 1;
  // The keymap to export.
  Keymap keymap = 2;
  // The base keymap to compare against.
  string base = 3;

  // The diff type for exporting.
  enum DiffType {
    // Unspecified diff type.
    DIFF_TYPE_UNSPECIFIED = 0;
    // ASCII diff.
    ASCII_DIFF = 1;
    // Unified diff format.
    UNIFIED_DIFF = 2;
  }

  // The diff type to use for the export.
  DiffType diff_type = 4;

  // Optional, file path for the keymap config
  string file_path = 5;
}

// ExportKeymapResponse is the response message for ExportKeymap.
message ExportKeymapResponse {
  // The exported keymap config, editor-specific.
  string keymap = 1;
  // The diff between the original editor-specific keymap config and the exported keymap.
  string diff = 2;
}

// ConfigDetectRequest is the request message for ConfigDetect.
message ConfigDetectRequest {
  // The editor type.
  EditorType editor_type = 1;
}

// ConfigDetectResponse is the response message for ConfigDetect.
message ConfigDetectResponse {
  // The default config paths.
  repeated string paths = 1;
}

// GetKeymapRequest is the request message for GetKeymap.
message GetKeymapRequest {
  // The config content in onekeymap.json format.
  string config = 1;

  // Whether to return all keymaps even when there are no bindings yet.
  bool return_all = 2;
}

// GetKeymapResponse is the response message for GetKeymap.
message GetKeymapResponse {
  // The loaded keymap.
  Keymap keymap = 1;
}

// SaveKeymapRequest is the request message for SaveKeymap.
message SaveKeymapRequest {
  // The keymap to save.
  Keymap keymap = 1;
}

// SaveKeymapResponse is the response message for SaveKeymap.
message SaveKeymapResponse {
  // The saved config content in onekeymap.json format
  string config = 1;
}
